--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently npm:watch-*",
+    "watch-vite": "vite",
+    "watch-vercel": "vercel dev --listen 2999",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "vercel": "vercel dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.2",
